[package]
name = "katsu"
version = "0.1.3"
edition = "2021"
authors = [
    "Fyra Labs",
    "Pornpipat Popum <cappy@fyralabs.com>",
    "Madomado <mado@fyralabs.com>",
    "Lleyton Gray <lleyton@fyralabs.com>",
]
description = "The vicious image builder"
license = "MIT"
repository = "https://github.com/FyraLabs/katsu"
documentation = "https://developer.fyralabs.com/katsu"
categories = ["system", "utilities"]
keywords = ["build", "image", "os", "linux", "chroot", "container"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
in-container = "1.1.0"
sudo = "0.6.0"
tracing = "0.1.37"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "tracing-log",
] }
serde_derive = "1"
serde = "1.0.152"
smartstring = { version = "1.0.1", features = ["serde"] }
tracing-error = "0.2"
regex = { version = "1", features = ["unicode-case"] }
glob = "0.3"
cmd_lib = "1.3.0"
serde_yaml = "0.9"
dotenvy = "0.15"
gpt = "3.1.0"
block-utils = "0.11.1"
tera = "1"
merge-struct = "0.1.0"
clap = { version = "4.4", features = ["derive", "env"] }
nix = { version = "0.27", features = ["mount", "hostname", "dir"] }
uuid = "1.4.1"
loopdev = { git = "https://github.com/mdaffin/loopdev.git", version = "0.5.0" }
bytesize = { version = "1.3.0", features = ["serde"] }
lazy_static = "1.4.0"
