[package]
name = "katsu"
version = "0.2.3"
edition = "2021"
authors = [
    "Fyra Labs",
    "Pornpipat Popum <cappy@fyralabs.com>",
    "Madomado <mado@fyralabs.com>",
    "Lleyton Gray <lleyton@fyralabs.com>",
]
description = "The vicious image builder"
license = "MIT"
repository = "https://github.com/FyraLabs/katsu"
documentation = "https://developer.fyralabs.com/katsu"
categories = ["system", "utilities"]
keywords = ["build", "image", "os", "linux", "chroot", "container"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudo = "0.6.0"
tracing = "0.1.37"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "tracing-log",
] }
serde_derive = "1"
serde = "1.0.152"
tracing-error = "0.2"
glob = "0.3"
cmd_lib = "1.3.0"
serde_yaml = "0.9"
dotenvy = "0.15"
tera = "1"
merge-struct = "0.1.0"
clap = { version = "4.4", features = ["derive", "env"] }
nix = { version = "0.27", features = ["mount", "hostname", "dir"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
loopdev-fyra = { version = "0.5.0" }
bytesize = { version = "1.3.0", features = ["serde"] }
