[package]
name = "katsu"
version = "0.7.0"
edition = "2021"
authors = [
    "Fyra Labs",
    "Pornpipat Popum <cappy@fyralabs.com>",
    "Madomado <mado@fyralabs.com>",
    "Lleyton Gray <lleyton@fyralabs.com>",
]
description = "The vicious image builder"
license = "MIT"
repository = "https://github.com/FyraLabs/katsu"
documentation = "https://developer.fyralabs.com/katsu"
categories = ["system", "utilities"]
keywords = ["build", "image", "os", "linux", "chroot", "container"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudo = "0.6.0"
tracing = "0.1.40"
color-eyre = "0.6.3"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
] }
serde_derive = "1"
serde = "1.0.204"
tracing-error = "0.2"
glob = "0.3"
serde_yaml = "0.9"
dotenvy = "0.15"
tera = "1"
merge-struct = "0.1.0"
clap = { version = "4.5", features = ["derive", "env"] }
nix = { version = "0.29", features = ["mount", "hostname", "dir"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
loopdev-fyra = { version = "0.5.0" }
bytesize = { version = "1.3.0", features = ["serde"] }
indexmap = "2.2.6"
ensan = "0.2.1"
hcl-rs = "0.18.0"
const_format = "0.2.32"
tiffin = "0.3.1"
tempfile = "3"
lazy_format = "2.0.3"
itertools = "0.13.0"
sys-mount = "3.0.1"
thiserror = "1.0.63"
ensan-proc-macro = "0.1.0"
passwd-rs = "0.2.0"
serde_json = "1.0.120"
dyn-clone = "1.0.17"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
